[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/tiles/world.tres" type="TileSet" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level.gd" type="Script" id=3]
[ext_resource path="res://assets/tiles/objects.tres" type="TileSet" id=4]
[ext_resource path="res://assets/environment/layers/background.png" type="Texture" id=5]
[ext_resource path="res://assets/tiles/decoration.tres" type="TileSet" id=6]
[ext_resource path="res://ui/game/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/objects/coins/sfx/coin.wav" type="AudioStream" id=8]
[ext_resource path="res://objects/door/door.tscn" type="PackedScene" id=9]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 2560, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/back"]
scale = Vector2( 10, 15 )
texture = ExtResource( 5 )

[node name="middle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )

[node name="TileMap" type="TileMap" parent="ParallaxBackground/middle"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 130, 70 )
format = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="World" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 70, 70 )
format = 1

[node name="Decoration" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 35, 35 )
format = 1

[node name="Door" parent="." instance=ExtResource( 9 )]

[node name="Objects" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 70, 70 )
format = 1

[node name="Pickups" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 70, 70 )
format = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PlayerSpawn" type="Position2D" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="Coin" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="_on_score_changed"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="_on_Player_life_changed"]
